can import gltf files exported by blender

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     },
     "downlevelIteration": true,
     "types": [
-      "babylonjs"
+      "babylonjs",
+      "babylonjs-loaders"
     ]
   },
   "exclude": [
