use grid material from babylonjs-materials

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "downlevelIteration": true,
     "types": [
       "babylonjs",
+      "babylonjs-materials",
       "babylonjs-loaders"
     ]
   },
