--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "babylonjs": "^4.1.0",
     "babylonjs-loaders": "^4.1.0",
+    "babylonjs-materials": "^4.1.0",
     "cdt2d": "^1.0.0",
     "classnames": "^2.2.6",
     "cli-columns": "^3.1.2",
