--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "npm:@hot-loader/react-dom",
     "react-redux": "7.1.3",
     "react-toast-notifications": "^2.4.0",
+    "recast-detour": "^1.1.0",
     "rectangle-decomposition": "^1.0.0",
     "redux": "4.0.5",
     "redux-observable": "^1.2.0",
